# mandelbrot

./: .gitignore  .mandelbrot.cr.swp  gemset.nix  mandelbrot.cr  mandelbrot.rb  shard.yml  shell.nix  tags
cpp/: .gitignore  Makefile  Mandelbrot.cpp  Mandelbrot.h  cpu.cpp  default.nix  md-cpu  meson.build  result  shell.nix  tags
cpp/gui/: #gui.glade#  Makefile  gui  gui.cpp  gui.glade~  tags
cpp/reconfigure/: build.ninja  compile_commands.json
cpp/reconfigure/meson-logs/: meson-log.txt
cuda/: Makefile  Mandelbrot.cpp  Mandelbrot.h  a.out  cpu  cpu.cpp  fhs.nix  gpu.cu  md-gpu  shell.nix  tags  test_kernel  test_kernel.cu
